FIX: z-index of the upgrade bar

--- a/css/app.css
+++ b/css/app.css
@@ -57,6 +57,7 @@ img{
     justify-content: flex-end;
     align-items: center;
     padding-right: 20px;
+    z-index: 999;
 }
 .content{
     flex-grow: 1;
